--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: José Zurita-Tapia
+email: jose.zurita-tapia@uib.no
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
-minimal_mistakes_skin: default
+  Hi, I'm Jose! I come from Ecuador and am currently doing my PhD in Comparative Politics at the University of Bergen, Norway. 
+  My dissertation deals with the Stability of Pre-electoral coalitions in Latin America. 
+  I love to read romantic, classic and mystery novels (I can't get enough). I'm fluent in Spanish, English and French.
+twitter_username: @JoseZuritaT
+github_username: jzuritat
+minimal_mistakes_skin: mint
 search: true
 
 # Build settings
