--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Hi, I'm Jose! I come from Ecuador and am currently doing my PhD in Comparative Politics at the University of Bergen, Norway. 
   My dissertation deals with the Stability of Pre-electoral coalitions in Latin America. 
   I love to read romantic, classic and mystery novels (I can't get enough). I'm fluent in Spanish, English and French.
-twitter_username: @JoseZuritaT
+twitter_username: JoseZuritaT
 github_username: jzuritat
 minimal_mistakes_skin: mint
 search: true
