--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@
 title: José Zurita-Tapia
 email: jose.zurita-tapia@uib.no
 description: >- # this means to ignore newlines until "baseurl:"
-  Hi, I'm Jose! I come from Ecuador and am currently doing my PhD in Comparative Politics at the University of Bergen, Norway. 
-  My dissertation deals with the Stability of Pre-electoral coalitions in Latin America. 
-  I love to read romantic, classic and mystery novels (I can't get enough). I'm fluent in Spanish, English and French.
+  PhD Candidate in Comparative Politics. 
+  From Quito, Ecuador.
+  Based in Bergen, Norway.
 twitter_username: JoseZuritaT
 github_username: jzuritat
 minimal_mistakes_skin: mint
@@ -79,13 +79,16 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://twitter.com/JoseZuritaT"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/jzuritat"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linked-in"
+      url: "https://www.linkedin.com/in/jose-zurita-tapia-0756097a/"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:jose.zurita-tapia@uib.no"
 
 defaults:
   # _posts
