--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: José Zurita-Tapia
+title: Jose Zurita-Tapia
 email: jose.zurita-tapia@uib.no
 description: >- # this means to ignore newlines until "baseurl:"
   PhD Candidate in Comparative Politics. 
@@ -58,7 +58,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "José Zurita-Tapia"
+  name   : "Jose Zurita-Tapia"
   avatar : "/assets/images/bio-photo.png"
   bio    : "PhD Candidate in Comparative Politics. 
   From Quito, Ecuador. Based in Bergen, Norway."
