--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Jose Zurita-Tapia
-email: jose.zurita-tapia@uib.no
+title: MM
+email:
 description: >- # this means to ignore newlines until "baseurl:"
-  PhD Candidate in Comparative Politics. 
-  From Quito, Ecuador.
-  Based in Bergen, Norway.
-twitter_username: JoseZuritaT
-github_username: jzuritat
-minimal_mistakes_skin: mint
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+twitter_username: username
+github_username: username
+minimal_mistakes_skin: default
 search: true
 
 # Build settings
@@ -58,38 +58,34 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name : "Jose Zurita-Tapia"
-  avatar : "/assets/images/bio-photo.png"
-  bio    : "PhD Candidate in Comparative Politics. 
-  From Quito, Ecuador. Based in Bergen, Norway."
+  name   : "First Lastname"
+  avatar : "/assets/images/bio-photo.jpg"
+  bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      url: "https://"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/JoseZuritaT"
+      url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/jzuritat"
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-in"
-      url: "https://www.linkedin.com/in/jose-zurita-tapia-0756097a/"
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope"
-      url: "mailto:jose.zurita-tapia@uib.no"
+      url: "https://github.com/"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://instagram.com/"
 
 footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/JoseZuritaT"
+      url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/jzuritat"
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-in"
-      url: "https://www.linkedin.com/in/jose-zurita-tapia-0756097a/"
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope"
-      url: "mailto:jose.zurita-tapia@uib.no"
+      url: "https://github.com/"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://instagram.com/"
 
 defaults:
   # _posts
