Change profile extension

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plugins:
 
 author:
   name   : "José Zurita-Tapia"
-  avatar : "/assets/images/bio-photo.png"
+  avatar : "/assets/images/bio-photo.jpg"
   bio    : "PhD Candidate in Comparative Politics.
 
   Quito, Ecuador - Bergen, Norway."
